--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -48806,5 +48806,109 @@
         "published": "Fri, 09 Jan 2026 22:56:13 +0530",
         "source": "Tech-Economic Times",
         "summary": "Germany's justice ministry plans to present measures in the \u200dnear future that would allow \u200bauthorities to more effectively combat the use of artificial \u2060intelligence to manipulate images in ways that violate personal rights, a spokesperson said."
+    },
+    {
+        "id": "https://techcrunch.com/video/inside-ces-2026s-physical-ai-takeover/",
+        "title": "Inside CES 2026\u2019s \u201cphysical AI\u201d takeover",
+        "link": "https://techcrunch.com/video/inside-ces-2026s-physical-ai-takeover/",
+        "published": "Fri, 09 Jan 2026 01:19:00 +0000",
+        "source": "TechCrunch",
+        "summary": "After years of chatbots and image generators, AI is finally leaving the screen. At CES 2026, that shift became impossible to ignore.&#160; The annual tech showcase in Las Vegas was&#160;dominated by &#8220;physical AI&#8221;&#160;and robotics, from Boston Dynamic&#8217;s newly redesigned Atlas humanoid robot to AI-powered ice makers (yes, really). The companies in attendance clearly want consumers [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/859751/meta-nuclear-energy-plant-agreements-ai-data-centers",
+        "title": "Meta expands nuclear power ambitions to include Bill Gates&#8217; startup",
+        "link": "https://www.theverge.com/news/859751/meta-nuclear-energy-plant-agreements-ai-data-centers",
+        "published": "2026-01-09T13:53:21-05:00",
+        "source": "The Verge",
+        "summary": "Meta has forged agreements with three nuclear power providers in an effort to secure the vast amount of electricity it needs to power AI data centers. The agreements with TerraPower (which is backed by Bill Gates), Oklo (backed by Sam Altman), and Vistra are expected to deliver 6.6 gigawatts of energy for Meta's projects by [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/culture/2026/01/us-black-hawk-helicopter-trespasses-on-private-montana-ranch-to-grab-elk-antlers/",
+        "title": "US Black Hawk helicopter trespasses on private Montana ranch to grab elk antlers",
+        "link": "https://arstechnica.com/culture/2026/01/us-black-hawk-helicopter-trespasses-on-private-montana-ranch-to-grab-elk-antlers/",
+        "published": "Fri, 09 Jan 2026 18:46:19 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Crazy, but that's how it goes."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/whatsapp-might-soon-be-subject-to-stricter-scrutiny-under-the-eus-digital-services-act-191000354.html?src=rss",
+        "title": "WhatsApp might soon be subject to stricter scrutiny under the EU's Digital Services Act",
+        "link": "https://www.engadget.com/social-media/whatsapp-might-soon-be-subject-to-stricter-scrutiny-under-the-eus-digital-services-act-191000354.html?src=rss",
+        "published": "Fri, 09 Jan 2026 19:10:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Meta's messaging app WhatsApp could soon be subject to deeper scrutiny (and punishment) under the European Commission's Digital Services Act, <a class=\"link\" href=\"https://www.reuters.com/technology/eu-considers-designating-whatsapp-very-large-platform-spokesperson-says-2026-01-09/\" target=\"_blank\"><em>Reuters </em>reports</a>. Because the app's broadcasting feature <a class=\"link\" href=\"https://www.engadget.com/whatsapps-new-channels-feature-lets-accounts-send-one-way-updates-to-followers-09"
+    },
+    {
+        "id": "https://www.dwitter.net/top",
+        "title": "JavaScript Demos in 140 Characters",
+        "link": "https://www.dwitter.net/top",
+        "published": "Fri, 09 Jan 2026 18:48:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46557489\">Comments</a>"
+    },
+    {
+        "id": "https://ezzeriesa.notion.site/How-to-store-a-chess-position-in-26-bytes-using-bit-level-magic-df1fdb5364eb42fdac11eb23b25e9605",
+        "title": "How to store a chess position in 26 bytes",
+        "link": "https://ezzeriesa.notion.site/How-to-store-a-chess-position-in-26-bytes-using-bit-level-magic-df1fdb5364eb42fdac11eb23b25e9605",
+        "published": "Fri, 09 Jan 2026 15:07:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46554652\">Comments</a>"
+    },
+    {
+        "id": "https://www.nytimes.com/2026/01/07/science/poison-arrows-south-africa.html",
+        "title": "Scientists discover oldest poison, on 60k-year-old arrows",
+        "link": "https://www.nytimes.com/2026/01/07/science/poison-arrows-south-africa.html",
+        "published": "Thu, 08 Jan 2026 23:24:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46547962\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/nothing-headphone-1-review/",
+        "title": "These fashion-forward headphones have no business sounding this good for the price",
+        "link": "https://www.zdnet.com/article/nothing-headphone-1-review/",
+        "published": "Fri, 09 Jan 2026 19:04:00 GMT",
+        "source": "Latest news",
+        "summary": "With bold styling, innovative features, and immersive sound, Nothing's first over-ear headphones are memorable - and on sale"
+    },
+    {
+        "id": "https://www.zdnet.com/article/peri-perimenopause-tracker-ces-womens-health/",
+        "title": "I saw this perimenopause tracker at CES. It's taking a new approach to women's health tracking",
+        "link": "https://www.zdnet.com/article/peri-perimenopause-tracker-ces-womens-health/",
+        "published": "Fri, 09 Jan 2026 18:52:52 GMT",
+        "source": "Latest news",
+        "summary": "Peri is a health wearable that detects perimenopausal symptoms. It's available for pre-order now."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oneplus-buds-pro-3-deal/",
+        "title": "These premium OnePlus earbuds are on sale for $30 off - grab them before they're gone",
+        "link": "https://www.zdnet.com/article/oneplus-buds-pro-3-deal/",
+        "published": "Fri, 09 Jan 2026 18:32:04 GMT",
+        "source": "Latest news",
+        "summary": "The OnePlus Buds Pro 3 introduce several improvements, including better audio output and a longer-lasting battery."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ios-26-slow-adoption-usage-numbers/",
+        "title": "Still haven't updated to iOS 26? You're far from alone - surprisingly",
+        "link": "https://www.zdnet.com/article/ios-26-slow-adoption-usage-numbers/",
+        "published": "Fri, 09 Jan 2026 18:25:23 GMT",
+        "source": "Latest news",
+        "summary": "Many iPhone users are still tapping 'Remind Me Later' on iOS 26. Is it design concerns, early bugs, or a lack of must-have features? Let's look at the data."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-meta-is-lining-up-massive-supply-of-nuclear-powe/articleshow/126442444.cms",
+        "title": "Why Meta is lining up massive supply of nuclear power",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-meta-is-lining-up-massive-supply-of-nuclear-powe/articleshow/126442444.cms",
+        "published": "Sat, 10 Jan 2026 00:13:44 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The parent company of Facebook on Friday announced agreements with TerraPower, Oklo and Vistra for nuclear power for its Prometheus AI data center that is being built in New Albany, Ohio. Meta announced Prometheus, which will be a 1-gigawatt cluster spanning across multiple data center buildings, in July. It's anticipated to come online this year."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-ai-is-generating-sexualised-images-of-real-people-fueling-outrage/articleshow/126442070.cms",
+        "title": "Elon Musk's AI is generating sexualised images of real people, fueling outrage",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-ai-is-generating-sexualised-images-of-real-people-fueling-outrage/articleshow/126442070.cms",
+        "published": "Fri, 09 Jan 2026 23:59:18 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Late Thursday, the Grok account on X started limiting requests for AI images to site subscribers who pay for certain premium features, according to posts from the chatbot. The change followed a \"backlash over its ability to create sexualized deepfakes without consent,\" the AI chatbot added, but users can \"subscribe or switch to the standalone Grok site for similar functions.\""
     }
 ]
