📚 Auto-update: News data refreshed - 2026-01-09 20:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -48910,5 +48910,61 @@
         "published": "Fri, 09 Jan 2026 23:59:18 +0530",
         "source": "Tech-Economic Times",
         "summary": "Late Thursday, the Grok account on X started limiting requests for AI images to site subscribers who pay for certain premium features, according to posts from the chatbot. The change followed a \"backlash over its ability to create sexualized deepfakes without consent,\" the AI chatbot added, but users can \"subscribe or switch to the standalone Grok site for similar functions.\""
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/09/how-the-sleepbuds-maker-ozlo-is-building-a-platform-for-sleep-data/",
+        "title": "How the Sleepbuds maker, Ozlo, is building a platform for sleep data",
+        "link": "https://techcrunch.com/2026/01/09/how-the-sleepbuds-maker-ozlo-is-building-a-platform-for-sleep-data/",
+        "published": "Fri, 09 Jan 2026 19:36:04 +0000",
+        "source": "TechCrunch",
+        "summary": "Ozlo Sleepbuds are going to have a big year, with new products, AI features, and more."
+    },
+    {
+        "id": "https://www.theverge.com/news/859715/x-grok-ai-deepfakes",
+        "title": "The latest on Grok&#8217;s gross AI deepfakes problem",
+        "link": "https://www.theverge.com/news/859715/x-grok-ai-deepfakes",
+        "published": "2026-01-09T14:13:32-05:00",
+        "source": "The Verge",
+        "summary": "The launch of an AI image editing feature on xAI&#8217;s Grok has caused chaos on X after it was used to generate a flood of nonconsensual sexualized deepfakes. As Hayden Field wrote, \u201cscreenshots show Grok complying with requests to put real women in lingerie and make them spread their legs, and to put small children [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-193045065.html?src=rss",
+        "title": "The Morning After: The best of CES 2026",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-193045065.html?src=rss",
+        "published": "Fri, 09 Jan 2026 19:44:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We\u2019re wrapping up coverage of the biggest tech show in the world. CES 2026 is almost over, and while we have more stories and wrap-ups to come, here are the most interesting products we\u2019ve spotted, written about and critiqued/praised. That includes our picks for the best of CES. We gave out 15 awards as well as our best of show, and you might be surprised by some of our picks \u2014 I know I was.</p>\n<p>Read on for some of the best things to come out of Las Vegas this week, but first up, our Best "
+    },
+    {
+        "id": "https://github.com/Hiepler/EuConform",
+        "title": "Show HN: EuConform \u2013 Offline-first EU AI Act compliance tool (open source)",
+        "link": "https://github.com/Hiepler/EuConform",
+        "published": "Fri, 09 Jan 2026 19:11:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46557823\">Comments</a>"
+    },
+    {
+        "id": "https://www.donutthejedi.com/",
+        "title": "Show HN: Rocket Launch and Orbit Simulator",
+        "link": "https://www.donutthejedi.com/",
+        "published": "Fri, 09 Jan 2026 19:15:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46557879\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-smart-glasses-ces-2026/",
+        "title": "CES 2026: These 7 smart glasses caught our eye - and you can buy this pair now",
+        "link": "https://www.zdnet.com/article/best-smart-glasses-ces-2026/",
+        "published": "Fri, 09 Jan 2026 19:21:08 GMT",
+        "source": "Latest news",
+        "summary": "What's more futuristic and innovative than technology you wear on your face? These are our top picks at this year's show."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/weekly-funding-roundup-jan-3-9-startup-investments-begin-on-a-subdued-note",
+        "title": "[Weekly funding roundup Jan 3-9] Startup investments begin on a subdued note",
+        "link": "https://yourstory.com/2026/01/weekly-funding-roundup-jan-3-9-startup-investments-begin-on-a-subdued-note",
+        "published": "Fri, 09 Jan 2026 15:16:57 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "This drop is not surprising, given that there is usually a slow start to funding in January, which was also seen in 2025."
     }
 ]
