--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -48966,5 +48966,77 @@
         "published": "Fri, 09 Jan 2026 15:16:57 GMT",
         "source": "YourStory RSS Feed",
         "summary": "This drop is not surprising, given that there is usually a slow start to funding in January, which was also seen in 2025."
+    },
+    {
+        "id": "https://www.theverge.com/tech/859740/this-semi-secret-lego-smart-brick-feature-gives-it-even-more-potential",
+        "title": "This semi-secret Lego Smart Brick feature gives it even more potential",
+        "link": "https://www.theverge.com/tech/859740/this-semi-secret-lego-smart-brick-feature-gives-it-even-more-potential",
+        "published": "2026-01-09T15:50:57-05:00",
+        "source": "The Verge",
+        "summary": "We just gave the Lego Smart Brick our Best In Show award at CES 2026, and I wanted to stop by The Lego Group's suite to get a last glimpse before I left Las Vegas. To my surprise, the company showed off one more feature I didn't see during my first demo, perhaps the most [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/859865/gmail-emoji-reaction-workspace-rollout-default",
+        "title": "Did you know that Gmail has emoji reactions?",
+        "link": "https://www.theverge.com/news/859865/gmail-emoji-reaction-workspace-rollout-default",
+        "published": "2026-01-09T15:42:48-05:00",
+        "source": "The Verge",
+        "summary": "Google rolled out emoji reactions to personal Gmail accounts a little over two years ago, and I completely forgot about it until now - probably because the option is hidden within a small, smiley face icon beside the Forward button. But now, Google is bringing emoji reactions to all Workspace users by default on February [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/859550/anti-ice-protest-photos-new-york",
+        "title": "Scenes from the anti-ICE march in New York City",
+        "link": "https://www.theverge.com/report/859550/anti-ice-protest-photos-new-york",
+        "published": "2026-01-09T15:30:45-05:00",
+        "source": "The Verge",
+        "summary": "On Thursday evening in Manhattan's Financial District, hundreds of protesters braved the cold to protest US Immigration and Customs Enforcement (ICE), after an agent fatally shot a woman at close range on Wednesday. Earlier that day, Department of Homeland Security Secretary Kristi Noem's visit to One World Trade Center in Lower Manhattan sparked protests outside [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/meta-is-making-a-big-bet-on-nuclear-with-oklo/",
+        "title": "Meta Is Making a Big Bet on Nuclear With Oklo",
+        "link": "https://www.wired.com/story/meta-is-making-a-big-bet-on-nuclear-with-oklo/",
+        "published": "Fri, 09 Jan 2026 20:59:12 +0000",
+        "source": "WIRED",
+        "summary": "Meta will finance Oklo's purchase of uranium for its reactors. It's a massive vote of confidence for both the startup and nuclear power, but challenges remain."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/cloudflare-may-pull-servers-out-of-italy-over-order-that-it-block-pirate-sites/",
+        "title": "Cloudflare defies Italy\u2019s Piracy Shield, won\u2019t block websites on 1.1.1.1 DNS",
+        "link": "https://arstechnica.com/tech-policy/2026/01/cloudflare-may-pull-servers-out-of-italy-over-order-that-it-block-pirate-sites/",
+        "published": "Fri, 09 Jan 2026 19:22:37 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Italy fines Cloudflare 14M euros for not blocking pirate sites on 1.1.1.1 DNS service."
+    },
+    {
+        "id": "https://www.engadget.com/apps/monarch-moneys-budgeting-app-is-50-percent-off-for-new-users-204507740.html?src=rss",
+        "title": "Monarch Money's budgeting app is 50 percent off for new users",
+        "link": "https://www.engadget.com/apps/monarch-moneys-budgeting-app-is-50-percent-off-for-new-users-204507740.html?src=rss",
+        "published": "Fri, 09 Jan 2026 20:45:07 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A new year is the perfect time to get your spending in order, and if you're not trying to build your own spreadsheet, budgeting apps are one of the best ways to do it. To save yourself some money in the process, you can pick up a year-long subscription to <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=1764214b-3509-4628-8631-8692fa12e904&amp;featureId=text-link&amp;linkText=Monarch+Money&amp;custData=eyJzb3VyY2VOYW"
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/cz7yv4524gqo",
+        "title": "Video filmed by ICE agent who shot Minneapolis woman emerges",
+        "link": "https://www.bbc.com/news/articles/cz7yv4524gqo",
+        "published": "Fri, 09 Jan 2026 20:54:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46559192\">Comments</a>"
+    },
+    {
+        "id": "http://renaudguezennec.eu/index.php/2026/01/09/qtnat-open-you-port-with-qt/",
+        "title": "QtNat \u2013 Open you port with Qt UPnP",
+        "link": "http://renaudguezennec.eu/index.php/2026/01/09/qtnat-open-you-port-with-qt/",
+        "published": "Fri, 09 Jan 2026 20:17:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46558739\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/5-ces-2026-products-id-buy-asap/",
+        "title": "Five CES 2026 products I'd buy as soon as they'd take my money",
+        "link": "https://www.zdnet.com/article/5-ces-2026-products-id-buy-asap/",
+        "published": "Fri, 09 Jan 2026 20:57:36 GMT",
+        "source": "Latest news",
+        "summary": "With the Las Vegas trade show coming to a close, here are the products that impressed me the most - enough to make me reach for my wallet."
     }
 ]
