📚 Auto-update: News data refreshed - 2026-01-09 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49038,5 +49038,77 @@
         "published": "Fri, 09 Jan 2026 20:57:36 GMT",
         "source": "Latest news",
         "summary": "With the Las Vegas trade show coming to a close, here are the products that impressed me the most - enough to make me reach for my wallet."
+    },
+    {
+        "id": "https://www.theverge.com/policy/859902/apple-google-run-by-cowards",
+        "title": "Tim Cook and Sundar Pichai are cowards",
+        "link": "https://www.theverge.com/policy/859902/apple-google-run-by-cowards",
+        "published": "2026-01-09T16:24:10-05:00",
+        "source": "The Verge",
+        "summary": "Since X's users started using Grok to undress women and children using deepfake images, I have been waiting for what I assumed would be inevitable: X getting booted from Apple's and Google's app stores. The fact that it hasn't happened yet tells me something serious about Silicon Valley's leadership: Tim Cook and Sundar Pichai are [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/solawave-wand-fans-this-buy-one-get-one-free-deal-is-for-you/",
+        "title": "Solawave Wand Fans: Don't Miss This Buy One, Get One Free Sale",
+        "link": "https://www.wired.com/story/solawave-wand-fans-this-buy-one-get-one-free-deal-is-for-you/",
+        "published": "Fri, 09 Jan 2026 21:48:34 +0000",
+        "source": "WIRED",
+        "summary": "Double up on LED therapy, because sharing is caring."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/its-time-for-apple-to-reinstate-iceblock-220802356.html?src=rss",
+        "title": "It's time for Apple to reinstate ICEBlock",
+        "link": "https://www.engadget.com/big-tech/its-time-for-apple-to-reinstate-iceblock-220802356.html?src=rss",
+        "published": "Fri, 09 Jan 2026 22:08:02 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In October, Apple caved to pressure from the Trump administration and <a class=\"link\" href=\"https://www.engadget.com/apps/apple-removes-iceblock-from-the-app-store-after-trump-administrations-demand-031659651.html\" target=\"_blank\">removed ICEBlock \u2014 and similar apps which crowdsourced the location of Immigrations and Customs Enforcement activity \u2014 from its App Store</a>. Apple's stated rationale? The apps could \"be used to harm law enforcement officers.\"  But armed-to-the-teeth ICE officers d"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/amazon-is-apparently-planning-a-big-box-store-in-the-chicago-suburbs-213451978.html?src=rss",
+        "title": "Amazon is apparently planning a big box store in the Chicago suburbs",
+        "link": "https://www.engadget.com/big-tech/amazon-is-apparently-planning-a-big-box-store-in-the-chicago-suburbs-213451978.html?src=rss",
+        "published": "Fri, 09 Jan 2026 21:34:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amazon is making a return, of sorts, to physical retail via plans to build a big-box retail store in the Chicago suburbs, <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=ba0a4cdc-cec8-416a-9e93-e11b8179129c&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=6fa47371-d78c-4495-8719-c8823bf845ac&amp;featureId=text-link&amp;merchantName=The+Information&amp;linkText=The+Information+reports&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t0b3AtVmVyaXpvbiIs"
+    },
+    {
+        "id": "https://beta.dwitter.net",
+        "title": "JavaScript Demos in 140 Characters",
+        "link": "https://beta.dwitter.net",
+        "published": "Fri, 09 Jan 2026 18:48:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46557489\">Comments</a>"
+    },
+    {
+        "id": "https://scottjg.com/posts/2026-01-08-crappy-computer-showdown/",
+        "title": "RTX 5090 and Raspberry Pi: Can It Game?",
+        "link": "https://scottjg.com/posts/2026-01-08-crappy-computer-showdown/",
+        "published": "Fri, 09 Jan 2026 19:33:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46558148\">Comments</a>"
+    },
+    {
+        "id": "https://lab.revelium.studio/ml-sharp",
+        "title": "Turn a single image into a navigable 3D Gaussian Splat with depth",
+        "link": "https://lab.revelium.studio/ml-sharp",
+        "published": "Fri, 09 Jan 2026 18:38:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46557352\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-laptops-ces-2026/",
+        "title": "7 new Windows laptops that delighted and surprised us at CES",
+        "link": "https://www.zdnet.com/article/best-laptops-ces-2026/",
+        "published": "Fri, 09 Jan 2026 21:11:02 GMT",
+        "source": "Latest news",
+        "summary": "This year is shaping up to be an exciting one for PCs: Dell is reviving the XPS, while MSI has just announced a new series of ultra-thin laptops."
+    },
+    {
+        "id": "https://inc42.com/buzz/razorpay-kicks-off-ipo-preparations-eyes-inr-4500-cr-fresh-issue/",
+        "title": "Razorpay Kicks Off IPO Preparations, Eyes INR 4,500 Cr Fresh Issue",
+        "link": "https://inc42.com/buzz/razorpay-kicks-off-ipo-preparations-eyes-inr-4500-cr-fresh-issue/",
+        "published": "Fri, 09 Jan 2026 21:36:38 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"570\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Razorpay_FTR-760x570-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"760\" />Fintech major Razorpay has reportedly kicked off preparations for its potential initial public offering (IPO) by the end of 2026.&#8230;"
     }
 ]
