--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49110,5 +49110,45 @@
         "published": "Fri, 09 Jan 2026 21:36:38 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"570\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Razorpay_FTR-760x570-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"760\" />Fintech major Razorpay has reportedly kicked off preparations for its potential initial public offering (IPO) by the end of 2026.&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/09/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "title": "CES 2026: Everything revealed, from Nvidia\u2019s debuts to AMD\u2019s new chips to Razer\u2019s AI oddities",
+        "link": "https://techcrunch.com/2026/01/09/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "published": "Fri, 09 Jan 2026 22:36:27 +0000",
+        "source": "TechCrunch",
+        "summary": "CES 2026\u00a0is in full swing in Las Vegas, with the show floor open to the public after a packed couple of days\u00a0occupied by\u00a0press conferences from the likes of Nvidia, Sony, and AMD\u00a0and previews from Sunday\u2019s Unveiled event."
+    },
+    {
+        "id": "https://www.theverge.com/news/860013/x-nmpa-music-publishers-dmca-antitrust-lawsuit",
+        "title": "X accuses music publishers of &#8216;weaponizing&#8217; DMCA takedowns",
+        "link": "https://www.theverge.com/news/860013/x-nmpa-music-publishers-dmca-antitrust-lawsuit",
+        "published": "2026-01-09T17:59:24-05:00",
+        "source": "The Verge",
+        "summary": "X is suing music publishers and their trade group, the National Music Publishers' Association (NMPA), accusing them of attempted coercion in their ongoing battle over licensing, as reported earlier by The Hollywood Reporter. The Elon Musk-owned platform accuses music publishers of colluding with the NMPA to \"coerce X into taking licenses to musical works from [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/860010/atitan-bluetooth-auracast-transceiver-ces-2026",
+        "title": "This company could help bring Auracast to an iPhone near you",
+        "link": "https://www.theverge.com/tech/860010/atitan-bluetooth-auracast-transceiver-ces-2026",
+        "published": "2026-01-09T17:56:41-05:00",
+        "source": "The Verge",
+        "summary": "One of the issues holding Auracast back from wider mainstream use is some companies' lack of support for the Bluetooth technology - Apple being a prime example. With iOS having 58 percent of the market share in North America and nearly 28 percent worldwide, a decision by Apple to enable native Auracast support would potentially [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/859994/ai-collectibles-funko-pops-amiibo-buddyo-heymates-ces-2026",
+        "title": "AI is coming for collectibles next",
+        "link": "https://www.theverge.com/tech/859994/ai-collectibles-funko-pops-amiibo-buddyo-heymates-ces-2026",
+        "published": "2026-01-09T17:52:36-05:00",
+        "source": "The Verge",
+        "summary": "AI toys, companions, and robots have been everywhere at CES this year, but among the horde of waddling plushies and light-up emoji eyes, two stood out to me. HeyMates and Buddyo are each betting that the collectible figurine boom is going to come back with an AI-powered vengeance, letting us chat to sports stars and [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/samsung-galaxy-watch8-deal-126/",
+        "title": "The Samsung Galaxy Watch Is Discounted on Amazon",
+        "link": "https://www.wired.com/story/samsung-galaxy-watch8-deal-126/",
+        "published": "Fri, 09 Jan 2026 22:13:58 +0000",
+        "source": "WIRED",
+        "summary": "The Samsung Galaxy Watch8 gets marked down across a variety of colors, sizes, and feature sets."
     }
 ]
