📚 Auto-update: News data refreshed - 2026-01-10 00:52 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49150,5 +49150,77 @@
         "published": "Fri, 09 Jan 2026 22:13:58 +0000",
         "source": "WIRED",
         "summary": "The Samsung Galaxy Watch8 gets marked down across a variety of colors, sizes, and feature sets."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/09/google-moonshot-spinout-sandboxaq-claims-an-ex-exec-is-attempting-extortion/",
+        "title": "Google moonshot spinout SandboxAQ claims an ex-exec is attempting \u2018extortion\u2019",
+        "link": "https://techcrunch.com/2026/01/09/google-moonshot-spinout-sandboxaq-claims-an-ex-exec-is-attempting-extortion/",
+        "published": "Sat, 10 Jan 2026 00:37:59 +0000",
+        "source": "TechCrunch",
+        "summary": "A former SandboxAQ executive filed a wrongful termination lawsuit filled with shocking allegations. The company is fighting back, hard."
+    },
+    {
+        "id": "https://www.theverge.com/news/860058/amazon-chicago-supercenter-store-plans",
+        "title": "Amazon is planning a Super Amazon-mart store near Chicago",
+        "link": "https://www.theverge.com/news/860058/amazon-chicago-supercenter-store-plans",
+        "published": "2026-01-09T18:18:41-05:00",
+        "source": "The Verge",
+        "summary": "Amazon could be taking another, even bigger swing at physical stores, this time with a Walmart-like supercenter. On Tuesday, the Orland Park Plan Commission in the Chicago suburb Orland Park, Illinois voted 6-1 to approve Amazon's proposal to develop 35 acres of land for a 229,000-square foot retail center, as reported by The Information. The [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/grok-is-being-used-to-mock-and-strip-women-in-hijabs-and-sarees/",
+        "title": "Grok Is Being Used to Mock and Strip Women in Hijabs and Sarees",
+        "link": "https://www.wired.com/story/grok-is-being-used-to-mock-and-strip-women-in-hijabs-and-sarees/",
+        "published": "Sat, 10 Jan 2026 00:23:08 +0000",
+        "source": "WIRED",
+        "summary": "A substantial number of AI images generated or edited with Grok are targeting women in religious and cultural clothing."
+    },
+    {
+        "id": "https://arstechnica.com/health/2026/01/measles-continues-raging-in-south-carolina-99-new-cases-since-tuesday/",
+        "title": "Measles continues raging in South Carolina; 99 new cases since Tuesday",
+        "link": "https://arstechnica.com/health/2026/01/measles-continues-raging-in-south-carolina-99-new-cases-since-tuesday/",
+        "published": "Fri, 09 Jan 2026 22:34:06 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "With so many exposures sites, officials can't figure out where people were infected."
+    },
+    {
+        "id": "https://arstechnica.com/google/2026/01/google-dont-make-bite-sized-content-for-llms-if-you-care-about-search-rank/",
+        "title": "Google: Don\u2019t make \u201cbite-sized\u201d content for LLMs if you care about search rank",
+        "link": "https://arstechnica.com/google/2026/01/google-dont-make-bite-sized-content-for-llms-if-you-care-about-search-rank/",
+        "published": "Fri, 09 Jan 2026 20:27:34 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google says creating for people rather than robots is the best long-term strategy."
+    },
+    {
+        "id": "https://mathstodon.xyz/@tao/115855840223258103",
+        "title": "Erdos problem #728 was solved more or less autonomously by AI",
+        "link": "https://mathstodon.xyz/@tao/115855840223258103",
+        "published": "Fri, 09 Jan 2026 22:39:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46560445\">Comments</a>"
+    },
+    {
+        "id": "https://www.hsrail.org/blog/caltrain-shows-why-every-region-should-be-moving-toward-regional-rail/",
+        "title": "Caltrain shows why every region should be moving toward regional rail",
+        "link": "https://www.hsrail.org/blog/caltrain-shows-why-every-region-should-be-moving-toward-regional-rail/",
+        "published": "Sat, 10 Jan 2026 00:25:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46561302\">Comments</a>"
+    },
+    {
+        "id": "https://nexanet.ai/blog/53-times-flocksafety-hardcoded-the-password-for-americas-surveillance-infrastructure",
+        "title": "Flock Hardcoded the Password for America's Surveillance Infrastructure 53 Times",
+        "link": "https://nexanet.ai/blog/53-times-flocksafety-hardcoded-the-password-for-americas-surveillance-infrastructure",
+        "published": "Fri, 09 Jan 2026 16:49:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46555807\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/softbank-sells-another-2-15-stake-in-ola-electric/",
+        "title": "SoftBank Sells Another 2.15% Stake In Ola Electric",
+        "link": "https://inc42.com/buzz/softbank-sells-another-2-15-stake-in-ola-electric/",
+        "published": "Sat, 10 Jan 2026 00:30:53 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"SoftBank Sells Another 2.15% Stake In Ola Electric\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ola-electric-softbank-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Japanese tech investor SoftBank Group sold 9.46 Cr shares, or 2.15% stake, in electric vehicle (EV) maker Ola Electric via&#8230;"
     }
 ]
