📚 Auto-update: News data refreshed - 2026-01-10 03:52 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49334,5 +49334,21 @@
         "published": "Sat, 10 Jan 2026 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Eternal, formerly known as Zomato, has received consecutive tax orders from West Bengal authorities demanding a total of approximately Rs 31.25 crore, inclusive of interest and penalties."
+    },
+    {
+        "id": "https://elbowgreasegames.substack.com/p/introducing-robotopia-a-3d-first",
+        "title": "Robotopia: A 3D, first-person, talking simulator",
+        "link": "https://elbowgreasegames.substack.com/p/introducing-robotopia-a-3d-first",
+        "published": "Thu, 08 Jan 2026 19:55:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46545636\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/tns-itnt-hub-inks-pact-with-xeedq-gmbh-for-quantum-computing-programmes/articleshow/126446878.cms",
+        "title": "TN's iTNT Hub inks pact with XeedQ GmbH for quantum computing programmes",
+        "link": "https://economictimes.indiatimes.com/tech/technology/tns-itnt-hub-inks-pact-with-xeedq-gmbh-for-quantum-computing-programmes/articleshow/126446878.cms",
+        "published": "Sat, 10 Jan 2026 09:05:28 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The programme will be anchored by the Tamil Nadu Technology Hub (iTNT), a public\u2013private initiative supported by the TN government that is an emerging and deeptech innovation network that works closely with academic institutions, startups, and research communities across the state. XeedQ GmbH will provide the remote access, quantum hardware, technical expertise, and learning support as part of this engagement."
     }
 ]
