📚 Auto-update: News data refreshed - 2026-01-10 04:25 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49350,5 +49350,13 @@
         "published": "Sat, 10 Jan 2026 09:05:28 +0530",
         "source": "Tech-Economic Times",
         "summary": "The programme will be anchored by the Tamil Nadu Technology Hub (iTNT), a public\u2013private initiative supported by the TN government that is an emerging and deeptech innovation network that works closely with academic institutions, startups, and research communities across the state. XeedQ GmbH will provide the remote access, quantum hardware, technical expertise, and learning support as part of this engagement."
+    },
+    {
+        "id": "https://www.pressherald.com/2025/09/09/maines-black-market-for-baby-eels-is-spawning-a-crime-thriller-subgenre/",
+        "title": "Maine's black market for baby eels",
+        "link": "https://www.pressherald.com/2025/09/09/maines-black-market-for-baby-eels-is-spawning-a-crime-thriller-subgenre/",
+        "published": "Sat, 10 Jan 2026 02:56:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46562301\">Comments</a>"
     }
 ]
